# lifecore_ros2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  ROADMAP_adoption_hardening.md  ROADMAP_lifecore_ros2_examples.md  TODO.md  TODO_2.md  TODO_adoption_hardening.md  TODO_lifecore_ros2_examples.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  SECURITY.md  SUPPORT.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design_discussion.yml  feature_request.yml
.github/instructions/: code-clarity-review.instructions.md  dependency-hygiene.instructions.md  google-napoleon-docstrings.instructions.md  logging-observability.instructions.md  naming-conventions.instructions.md  ros2-architecture-context.instructions.md  uv-run-package-manager.instructions.md
.github/prompts/: historize.prompt.md  logical-commits.prompt.md  smart-commits-session.prompt.md
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  publish-testpypi.yml  publish.yml  release.yml  tag-release.yml
docs/: api.rst  api_friction_audit.rst  architecture.rst  changelog.rst  conf.py  contributing.rst  examples.rst  faq.rst  getting_started.rst  index.rst  mempalace_strategy.rst  migration_from_rclpy.rst  patterns.rst  quickstart.rst  testing.rst
docs/_static/: custom.css
docs/api/: components.rst  core.rst  testing.rst
docs/concepts/: mental_model.rst
docs/design_notes/: callback_groups.rst  dynamic_components.rst  error_handling_contract.rst  lifecycle_policies.rst  observability.rst  runtime_introspection.rst
docs/planning/: README.rst  adoption_hardening.rst  backlog.rst  examples_repo.rst  lifecore_state_architecture_report_en_v3.md  roadmap.rst  strategy.rst
docs/planning/sprints/: README.rst  sprint_10_factory.rst  sprint_10_health_status.rst  sprint_11_watchdog_light.rst  sprint_12_lifecycle_policies.rst  sprint_13_1_parameter_observer.rst  sprint_13_parameters.rst  sprint_14_factory.rst  sprint_15_tooling_generation.rst  sprint_17_repository_audit.rst  sprint_1_service_client.rst  sprint_2_error_handling.rst  sprint_3_testing_infrastructure.rst  sprint_4_5_state_component_example.rst  sprint_4_callback_gating.rst  sprint_4_lifecycle_comparison.rst  sprint_4_real_examples.rst  sprint_5_1_composition_surface.rst  sprint_5_callback_gating.rst  sprint_5_concurrency.rst  sprint_5_internal_cascade.rst  sprint_6_callback_gating.rst  sprint_6_concurrency.rst  sprint_6_lifecycle_policies.rst  sprint_7_cleanup_api.rst  sprint_7_lifecycle_policies.rst  sprint_7_observability.rst  sprint_8_concurrency.rst  sprint_8_observability.rst  sprint_8_parameters.rst  sprint_9_factory.rst  sprint_9_observability.rst  sprint_9_parameters.rst
docs/release_notes/: v0.4.0.md
examples/: composed_ordered_pipeline.py  composed_pipeline.py  minimal_health_status.py  minimal_node.py  minimal_parameter.py  minimal_parameter_observer.py  minimal_publisher.py  minimal_service_client.py  minimal_service_server.py  minimal_state_component.py  minimal_subscriber.py  minimal_timer.py  minimal_watchdog.py  telemetry_publisher.py
lifecore_state/: README.rst  anti_goals.rst  lifecycle_state_separation.rst  message_semantics.rst  package_boundaries.rst  terminology.rst
lifecore_state/rfcs/: README.rst  rfc_001_lifecore_state_architecture.rst  sprint_17_consistency_review.rst  sprint_17_final_review_checklist.rst  sprint_17_static_check.rst
scripts/: validate_customization_frontmatter.py
src/lifecore_ros2/: __init__.py  _version.py
src/lifecore_ros2/components/: __init__.py  lifecycle_parameter_component.py  lifecycle_parameter_observer_component.py  lifecycle_publisher_component.py  lifecycle_service_client_component.py  lifecycle_service_server_component.py  lifecycle_subscriber_component.py  lifecycle_timer_component.py  lifecycle_watchdog_component.py  publisher_component.py  service_component.py  subscriber_component.py  topic_component.py
src/lifecore_ros2/core/: __init__.py  _iface_type.py  activation_gating.py  composed_lifecycle_node.py  exceptions.py  health.py  lifecycle_component.py  lifecycle_component_node.py
src/lifecore_ros2/testing/: __init__.py  assertions.py  concurrency.py  fakes.py  fixtures.py  helpers.py
tests/: conftest.py  test_activation_gating.py  test_components.py  test_core.py  test_edge_transitions.py  test_error_policy.py  test_failure_propagation.py  test_integration_lifecycle.py  test_lifecycle.py  test_regression_add_component.py  test_regression_concurrent_transitions.py  test_regression_double_transitions.py  test_smoke_import.py  typing_smoke_check.py
tests/components/: _service_stubs.py  _topic_stubs.py  conftest.py  test_cleanup_ownership.py  test_components.py  test_lifecycle_parameter_component.py  test_lifecycle_parameter_observer_component.py  test_publisher_component.py  test_service_client.py  test_service_components.py  test_service_server.py  test_subscriber_component.py  test_timer_component.py  test_watchdog_component.py
tests/core/: test_activation_gating.py  test_callback_group_helper.py  test_cascade_order.py  test_cleanup_policy.py  test_edge_transitions.py  test_error_policy.py  test_failure_propagation.py  test_health.py  test_iface_type_inference.py  test_lifecycle.py  test_observability.py  test_registration_site_metadata.py  test_regression_active_lock.py  test_regression_add_component.py  test_regression_concurrent_transitions.py  test_regression_double_transitions.py  test_regression_threaded_registration.py
tests/helpers/: __init__.py  lifecycle.py
tests/integration/: test_integration_lifecycle.py
tests/smoke/: test_smoke_examples.py  test_smoke_import.py  typing_smoke_check.py
tests/testing/: conftest.py  test_concurrency.py  test_fakes.py  test_fixtures.py  test_helpers_assertions.py  test_private_lifecycle_helpers.py
tools/copilot/: README.md
tools/copilot/agents/: lifecycle-test-designer.agent.md  mempalace-auditor.agent.md  mempalace-knowledge-writer.agent.md  mempalace-reader.agent.md  readme-author.agent.md  (+13 more)
tools/demos/: README.md  record_composed_pipeline.sh
(+74 files in other folders)
