[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lifecore_ros2"
dynamic = ["version"]
description = "A composable lifecycle framework for ROS 2"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Adrien Pajon", email = "7260230+apajon@users.noreply.github.com" }
]
dependencies = [
  "numpy>=2.4.4",
  "pydantic>=2.0",
]

[project.urls]
Repository = "https://github.com/apajon/lifecore_ros2"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pre-commit>=4.0",
  "ruff>=0.11.8",
  "pyright>=1.1.408",
  "python-semantic-release>=10.5",
  "build>=1.2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/lifecore_ros2/_version.py"

[tool.semantic_release]
version_toml = []
build_command = "python -m build"
tag_format = "v{version}"
commit_parser = "conventional"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = [
  "build",
  "dist",
  "install",
  "log",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
