[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lifecore_ros2"
dynamic = ["version"]
description = "A composable lifecycle framework for ROS 2"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Adrien Pajon", email = "7260230+apajon@users.noreply.github.com" }
]
license = {file = "LICENSE"}
dependencies = [
  "numpy>=2.4.4",
  "pydantic>=2.0",
]

[project.urls]
Repository = "https://github.com/apajon/lifecore_ros2"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pre-commit>=4.0",
  "ruff>=0.11.8",
  "pyright>=1.1.408",
  "build>=1.2.2",
]

[dependency-groups]
docs = [
  "sphinx>=8.0",
]
release = [
  "python-semantic-release>=10.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
lifecore_ros2 = ["py.typed"]
"lifecore_ros2.core" = ["py.typed"]
"lifecore_ros2.components" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/lifecore_ros2/_version.py"

[tool.semantic_release]
version_toml = []
build_command = "uv run --extra dev python -m build"
tag_format = "v{version}"
commit_parser = "conventional"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = [
  "build",
  "dist",
  "install",
  "log",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-p", "no:launch_testing",
  "-p", "no:launch_pytest",
  "-p", "no:launch_ros",
  "-p", "no:ament_copyright",
  "-p", "no:ament_flake8",
  "-p", "no:ament_lint",
  "-p", "no:ament_pep257",
  "-p", "no:ament_xmllint",
]
