[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lifecore_ros2"
dynamic = ["version"]
# Canonical positioning sentence — single source of truth.
# Reused verbatim in README.md, docs/index.rst, docs/architecture.rst, ROADMAP.md.
# When updating, see CONTRIBUTING.md "Canonical positioning sentence".
description = "lifecore_ros2 is a minimal lifecycle composition library for ROS 2 Jazzy — no hidden state machine."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Adrien Pajon", email = "7260230+apajon@users.noreply.github.com" }
]
# PEP 639 SPDX expression; setuptools >= 77 required (pinned to >= 80 above).
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["ros2", "ros", "lifecycle", "rclpy", "robotics", "component"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Developers",
]
# rclpy is intentionally absent — it comes from the system ROS installation.
dependencies = []

[project.urls]
Documentation = "https://apajon.github.io/lifecore_ros2/"
Source = "https://github.com/apajon/lifecore_ros2"
Changelog = "https://github.com/apajon/lifecore_ros2/blob/main/CHANGELOG.md"
Issues = "https://github.com/apajon/lifecore_ros2/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pre-commit>=4.0",
  "ruff>=0.11.8",
  "pyright>=1.1.408",
  "build>=1.2.2",
]

[dependency-groups]
docs = [
  "sphinx>=8.0",
]
release = [
  "python-semantic-release>=10.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
lifecore_ros2 = ["py.typed"]
"lifecore_ros2.core" = ["py.typed"]
"lifecore_ros2.components" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/lifecore_ros2/_version.py"

[tool.semantic_release]
version_toml = []
build_command = "uv build"
tag_format = "v{version}"
commit_parser = "conventional"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = [
  "build",
  "dist",
  "install",
  "log",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
include = ["src", "tests", "examples"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
# rclpy ships partial stubs; downgrade Unknown* noise from error to warning so
# pyright strict applies to our code without drowning in unactionable rclpy gaps.
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
# Tests legitimately access protected internals for white-box verification.
reportPrivateUsage = "warning"
# typing_smoke_check.py contains intentionally unreachable static-analysis helpers.
reportUnusedFunction = "warning"
reportUnusedClass = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-p", "no:launch_testing",
  "-p", "no:launch_pytest",
  "-p", "no:launch_ros",
  "-p", "no:ament_copyright",
  "-p", "no:ament_flake8",
  "-p", "no:ament_lint",
  "-p", "no:ament_pep257",
  "-p", "no:ament_xmllint",
]
